# award-certificate-maker

./: README.md  config.json  config_schema.json  json_helper.py  main.py  pyproject.toml  requirements.txt
data/: names.csv
